# RapidTypst

./: .gitignore  README.md  backend_test.py  backend_test_results.json  design_guidelines.json  package-lock.json  start.bat  start.ps1
.emergent/: emergent.yml
backend/: requirements.txt  server.py
backend/templates/: basic.typ  blank.typ  letter.typ  metadata.json  report.typ  resume.typ
frontend/: .env  craco.config.js  package-lock.json  package.json
frontend/plugins/visual-edits/: dev-server-setup.js
frontend/public/: index.html
frontend/public/icons/: README.md  convert_images.ps1
frontend/src/: App.css  App.js  index.css
frontend/src/icons/: GENERATE.md  convert_images.ps1  convert_pngs.bat
frontend/src/pages/: AboutPage.jsx  EditorPage.jsx
memory/: PRD.md
rapid-typst-desktop/: BUILDING.md  README.md
rapid-typst-desktop/frontend/: index.html  package.json  tailwind.config.js  vite.config.js
rapid-typst-desktop/frontend/src/: App.jsx  index.css
rapid-typst-desktop/frontend/src/components/: AboutDialog.jsx  TemplateGallery.jsx
rapid-typst-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rapid-typst-desktop/src-tauri/src/: commands.rs  main.rs  typst_compiler.rs
rapid-typst-desktop/templates/: academic.typ  code-docs.typ  math.typ
test_reports/: iteration_1.json  iteration_2.json
