[package]
name = "rapid-typst-desktop"
version = "1.0.0"
description = "A native desktop Typst editor with live preview"
authors = ["Rapid Typst"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["dialog-all", "fs-all", "path-all", "shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typst = "0.11"
typst-pdf = "0.11"
typst-svg = "0.11"
comemo = "0.4"
chrono = "0.4"
dirs = "5.0"
notify = "6.1"
base64 = "0.21"
tempfile = "3.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
